Bug 163575 - sw smart justify: crash/assert during odt conversion of an Arabic DOCX document
Summary: sw smart justify: crash/assert during odt conversion of an Arabic DOCX document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.3 target:24...
Keywords: regression
Depends on:
Blocks: DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-10-22 14:55 UTC by László Németh
Modified: 2025-04-13 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (80.32 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-10-22 14:56 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-10-22 14:55:40 UTC
Description:
Regression since commit 1fb6de02709a5f420f21ebd683915da50ce0d198
"tdf#163149 sw smart justify: fix line shrinking at image wrapping".


Steps to Reproduce:
1. Open the test document.
2. Save as odt.

Actual Results:
Crash/assert

Expected Results:
No problem.


Reproducible: Always


User Profile Reset: No

Additional Info:
Reported by Caolán McNamara in https://gerrit.libreoffice.org/c/core/+/174985
Comment 1 László Németh 2024-10-22 14:56:18 UTC
Created attachment 197191 [details]
test document
Comment 2 László Németh 2024-10-22 15:20:27 UTC
proposed fix: https://gerrit.libreoffice.org/c/core/+/175419
Comment 3 Commit Notification 2024-10-22 21:12:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/270c96e12c4a14c4f9e130d15310843da3a6af68

tdf#163575 sw smart justify: fix size resolution for SwBidiPortion

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-10-23 19:05:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/96a39e8917ff5f6d89450d6666a6a6222c7eb62b

tdf#163575 sw smart justify: fix size resolution for SwBidiPortion

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-10-25 14:09:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/4e5373903a992a145abc903ed3bab844a1944618

tdf#163575 sw smart justify: fix size resolution for SwBidiPortion

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-10-28 13:05:05 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/db35d917befec21fffb168ab9e0e87191b2d02d1

tdf#163575 sw smart justify: fix size resolution for SwBidiPortion

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.